# hpc-agent

./: .dockerignore  .env.example  .gitignore  .last_job_id  CHANGELOG.md  Dockerfile  README.md  USER_GUIDE.md  app.py  docker-compose.yml  job.sh  main.py  pyproject.toml  test_diagnoser.py  test_error_diagnoser_skill.py  test_hpc_workflow.py  test_slurm_assistant.py  test_ssh.py  test_submit.py  test_tools.py  textual_cli.py  web_app.py
config/: external_mcp_servers.yaml
data/errors/: README.md  errors_db.json  real_cases.json
data/hpc_documents/: cluster_info.txt  cluster_sinfo_bscc_a.txt  common_errors.txt  environment_modules_conda.txt  gpu_cuda_troubleshooting.txt  gpu_usage.txt  slurm_cancel.txt  slurm_output_logs.txt  slurm_pending.txt  slurm_status.txt  slurm_submit.txt  storage_quota_files.txt  vasp_troubleshooting.txt  vasp_workflow.txt
data/jobs/: job_registry.json
docs/: DOCKER.md  EXTERNAL_SKILLS.md  LIVE_TEST_CHECKLIST.md  README.md  USER_GUIDE.md  VASP_TEST_TEMPLATES.md  skills_architecture.md
docs/mcp_docs/: EXTERNAL_MCP_INJECTION.md  MCP.md  MCP_CHATGPT_APP_METADATA.md  MCP_CHATGPT_WEB.md  MCP_CLIENTS.md  MCP_DEPLOYMENT.md
modules/: chatbot.py  claude_code_reporter.py  error_diagnoser.py  job_query.py  job_registry.py  job_submitter.py  knowledge_base.py  router.py  slurm_assistant.py  slurm_tools.py  ssh_client.py  vasp_assistant.py  vasp_monitor.py  vasp_outcar_parser.py  vasp_report_context.py
modules/core/: agent_runtime.py  check_runner.py  confirmed_actions.py  conversation_state.py  environment_status.py  hpc_config.py  initializer.py  llm_fallback.py  paths.py  project_doctor.py  tool_calling.py
modules/knowledge/: error_case_manager.py  error_diagnoser.py  knowledge_base.py
modules/mcp/: __init__.py  audit.py  formatters.py  prompts.py  resources.py  server.py  tools.py
modules/mcp_client/: __init__.py  audit.py  cli.py  client_manager.py  config.py  formatters.py  injection.py  tool_registry.py
modules/routing/: intent_classifier.py  router.py  tool_dispatcher.py
modules/skills/: __init__.py  external_python_runner.py  resource_detector.py  skill_executor.py  skill_registry.py
modules/slurm/: hpc_test_files.py  job_cleanup.py  job_lifecycle.py  job_listing.py  job_logs.py  job_monitor.py  job_query.py  job_registry.py  job_submission.py  job_submitter.py  remote.py  remote_utils.py  slurm_assistant.py  slurm_tools.py  submit_attachments.py  vasp_sync.py
modules/tui/: tui_formatters.py  tui_helpers.py  tui_monitor.py  tui_vasp_workflow.py
modules/vasp/: claude_code_reporter.py  vasp_assistant.py  vasp_figures.py  vasp_input_generator.py  vasp_monitor.py  vasp_outcar_parser.py  vasp_pdf_reporter.py  vasp_report_context.py
packaging/: PRIVATE_SERVER_LAYOUT.md  RELEASE_NOTES_0.2.5.md  RELEASE_NOTES_0.2.6.md  RELEASE_NOTES_TEMPLATE.md  latest.example.json
packaging/site/: index.html
packaging/systemd/: hpc-agent-mcp.service
scripts/: install.sh  start_mcp_http.sh
skills/diagnose_error/: SKILL.md
skills/generate_sbatch/: SKILL.md
skills/generate_vasp_inputs/: SKILL.md
skills/generate_vasp_job/: SKILL.md
skills/get_available_resources/: SKILL.md
skills/inspect_job/: SKILL.md
skills/suggest_params/: SKILL.md
skills/vasp_report/: SKILL.md
static/: index.html
tests/: __init__.py  _bootstrap.py  run_all_checks.py  test_error_diagnoser_skill.py  test_hpc_workflow.py  test_slurm_assistant.py  test_ssh.py  test_submit.py  test_tools.py  test_vasp_assistant.py  test_vasp_monitor.py
tests/core/: test_agent_runtime.py  test_confirmed_actions.py  test_conversation_state.py  test_environment_status.py  test_initializer.py  test_packaging.py  test_project_doctor.py  test_tool_calling.py
tests/fixtures/: fake_mcp_server.py  rag_cases.json  route_cases.json  skill_cases.json
tests/knowledge/: test_error_diagnoser_skill.py  test_knowledge_base_context.py
tests/mcp/: test_external_mcp_client.py  test_mcp_tools.py
tests/routing/: test_route_cases_fixture.py  test_route_planner.py  test_router_negative.py  test_shortcut_expansion.py  test_tool_dispatcher.py
tests/skills/: test_skill_eval.py  test_skill_registry.py
tests/slurm/: test_cleanup_tool_calling.py  test_hpc_test_files.py  test_hpc_workflow.py  test_job_lifecycle.py  test_job_query_tool_calling.py  test_slurm_assistant.py  test_slurm_tool_calling.py  test_ssh.py  test_submit.py  test_tools.py
tests/tui/: test_tui_helpers.py
tests/vasp/: test_vasp_assistant.py  test_vasp_monitor.py  test_vasp_postprocess_tool_calling.py  test_vasp_tool_calling.py
tools/: rag_debug.py  rag_eval.py  route_debug.py  skill_debug.py  skill_eval.py
