[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent"
version = "0.2.0"
description = "Conversational HPC and Slurm agent with VASP workflow support."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "qyz" },
]
keywords = ["hpc", "slurm", "vasp", "agent", "textual"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anthropic>=0.105.2",
    "jieba>=0.42.1",
    "openai>=2.40.0",
    "paramiko>=5.0.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "textual>=6.0.0",
]

[project.scripts]
hpc-agent = "app:main"
hpc-agent-check = "modules.core.check_runner:main"

[tool.setuptools]
py-modules = ["app", "textual_cli"]

[tool.setuptools.packages.find]
include = ["modules*"]
