[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent"
version = "0.2.3"
description = "Conversational HPC and Slurm agent with VASP workflow support."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "qyz" },
]
keywords = ["hpc", "slurm", "vasp", "agent", "textual"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anthropic>=0.105.2",
    "jieba>=0.42.1",
    "openai>=2.40.0",
    "paramiko>=5.0.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "textual>=6.0.0",
]

[project.scripts]
hpc-agent = "app:main"
hpc-agent-check = "modules.core.check_runner:main"
hpc-agent-init = "modules.core.initializer:main"

[tool.setuptools]
py-modules = ["app", "textual_cli"]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.setuptools.data-files]
"share/hpc-agent" = [".env.example"]
"share/hpc-agent/data/errors" = [
    "data/errors/README.md",
    "data/errors/generic_errors.json",
    "data/errors/real_cases.json",
]
"share/hpc-agent/data/hpc_documents" = [
    "data/hpc_documents/cluster_info.txt",
    "data/hpc_documents/cluster_sinfo_bscc_a.txt",
    "data/hpc_documents/common_errors.txt",
    "data/hpc_documents/environment_modules_conda.txt",
    "data/hpc_documents/gpu_cuda_troubleshooting.txt",
    "data/hpc_documents/gpu_usage.txt",
    "data/hpc_documents/slurm_cancel.txt",
    "data/hpc_documents/slurm_output_logs.txt",
    "data/hpc_documents/slurm_pending.txt",
    "data/hpc_documents/slurm_status.txt",
    "data/hpc_documents/slurm_submit.txt",
    "data/hpc_documents/storage_quota_files.txt",
    "data/hpc_documents/vasp_troubleshooting.txt",
    "data/hpc_documents/vasp_workflow.txt",
]
"share/hpc-agent/docs" = [
    "docs/DOCKER.md",
    "docs/LIVE_TEST_CHECKLIST.md",
    "docs/README.md",
    "docs/USER_GUIDE.md",
    "docs/VASP_TEST_TEMPLATES.md",
    "docs/skills_architecture.md",
]
"share/hpc-agent/skills/diagnose_error" = ["skills/diagnose_error/SKILL.md"]
"share/hpc-agent/skills/generate_sbatch" = ["skills/generate_sbatch/SKILL.md"]
"share/hpc-agent/skills/generate_vasp_inputs" = ["skills/generate_vasp_inputs/SKILL.md"]
"share/hpc-agent/skills/generate_vasp_job" = ["skills/generate_vasp_job/SKILL.md"]
"share/hpc-agent/skills/get_available_resources" = ["skills/get_available_resources/SKILL.md"]
"share/hpc-agent/skills/inspect_job" = ["skills/inspect_job/SKILL.md"]
"share/hpc-agent/skills/suggest_params" = ["skills/suggest_params/SKILL.md"]
"share/hpc-agent/skills/vasp_report" = ["skills/vasp_report/SKILL.md"]
